修复：限制贤者之石范围转化规则